
                     ngIRCd - Next Generation IRC Server

                        (c)2001-2006 Alexander Barton,
                    alex@barton.de, http://www.barton.de/

               ngIRCd is free software and published under the
                   terms of the GNU General Public License.

                               -- ChangeLog --


ngIRCd HEAD

  - Changed Numerics 265 and 266 to follow ircd 2.11.x "standards".
  - Allow PASS syntax defined in RFC 1459 for server links, too.
  - Enhanced ISUPPORT message (005 numeric).

ngIRCd 0.10.0 (2006-10-01)

  - Fixed file handle leak when daemon is not able to send MOTD to a client.

  ngIRCd 0.10.0-pre2 (2006-09-09)
  - Fixed build problems with GCC option -fstack-protector.
  - Minor documentation updates.

  ngIRCd 0.10.0-pre1 (2006-08-02)
  - Validate "ServerName" (see RFC 2812, section 2.3.1).
  - Enhanced DIE to accept a single parameter ("comment text") which is sent
    to all locally connected clients before the server goes down.
  - The ngIRCd handles time shifts backwards more gracefully now (the
    timeout handling doesn't disconnect clients by mistake any more).
  - Internal: Restructured connection handling (the connection ID is equal
    to the file descriptor of the connection).
  - Internal: Simplified resolver code.
  - JOIN now supports more than one channel key at a time.
  - Implemented numeric "333": Time and user name who set a channel topic.
  - Enhanced the handler for PING and PONG commands: fix forwarding and enable
    back-passing of a client supplied additional argument of PING.
  - Changed handling of timeouts for unregistered connections: don't reset
    the counter if data is received and disconnect clients earlier.
  - Removed unnecessary #define of "LOCAL", now use plain C "static" instead.
  - Channel topics are no longer limited to 127 characters: now the only limit
    is the maximum length of an IRC command, i. e. 512 bytes (in practice, this